--- a/lib/templates/default/feature/html/steps.erb
+++ b/lib/templates/default/feature/html/steps.erb
@@ -1,9 +1,10 @@
 <% @scenario.steps.each_with_index do |step,index| %>
   <% @step = step %>
 
-  <div class="comments" style="display: none;"><%= step.comments %></div>
   
   <div <%= "id='#{@id}Step#{index}'" %> class="step <%= (index + 1) % 2 == 0 ? 'even' : 'odd' %>">
+    <div class="comments" style="display: none;"><%= h step.comments %></div>
+  
     <span class="predicate"><%= step.keyword %></span>
 
     <% if @scenario.outline? %>
