Feature Page Enhancements
 + Expand/Collapse All Scenarios
 + Scenarios can be collapsed/expanded by the title now, not just
   the toggle on the left-hand side; making the whole experience
   easier and requiring less expertise with First-Person Shooters.

 + Hid all the additional tags, comments, file location, and step
   links behind the 'More Detail' link at the top.  This is to give
   a less cluttered customer view, while still providing a developer
   specific view when needed.

 + Yanked out scenario, step, and scenario outline specific javascript
   as well as a lot of the needless IDing that was going on.

--- a/lib/templates/default/feature/html/feature.erb
+++ b/lib/templates/default/feature/html/feature.erb
@@ -1,22 +1,31 @@
+<script type="text/javascript" charset="utf-8">
+  $(function() {
+    $(".developer").hide();
+  });
+</script>
+
 <div class="feature">
-	<div class="title">
-		<span class="pre"><%= @feature.keyword %>:</span>
-		<span class="name"><%= @feature.value %></span>
-	</div>
+  <div class="title">
+    <span class="pre"><%= @feature.keyword %>:</span>
+    <span class="name"><%= @feature.value %></span>
 
-	<div class="meta">
-		<div class="file"><%= h(@feature.file) %></div>
-		<div class="tags">
-			<% @feature.tags.each do |tag| %>
-			<a href="<%= url_for tag %>"><%= tag.value %></a>
-			<% end %>
-		</div>		
-	</div>
+    <div id="view">[More Detail]</div>
+    <div id="expand">[Collapse All]</div>
+</div>
 
-	<div class="description">
-		<%= @feature.description %>
-	</div>
+<div class="meta">
+  <div class="file developer"><%= h(@feature.file) %></div>
+  <div class="tags developer">
+    <% @feature.tags.each do |tag| %>
+      <a href="<%= url_for tag %>"><%= tag.value %></a>
+    <% end %>
+  </div>
+</div>
 
-	<%= yieldall %>
+<div class="description">
+  <%= @feature.description %>
+</div>
+
+<%= yieldall %>
 </div>
 
