--- a/lib/templates/default/fulldoc/html/css/common.css
+++ b/lib/templates/default/fulldoc/html/css/common.css
@@ -4,9 +4,11 @@
 .tags { font-family: monospace;	font-size: 14px; }
 .title { padding: 10px; font-size: 24px; }
 
+#view, #expand { float: right; font-size: 13px; color: gray; vertical-align: bottom; }
+
 .feature > .title, .tag > .title, .requirements > .title { margin: 20px 20px 10px 20px;	padding-left: 0px; border-bottom: 1px solid #E3E3E3; }
-.meta .file { float: right; margin-right: 20px; }
-.title .pre {	color: #696969; }
+.meta .file { float: right; margin-top: 5px; margin-right: 20px; }
+.title .pre { color: #696969; }
 .title .name { font-weight: bold; color: #3F3F3F; }
 
 .meta { margin-left: 30px; color: gray; }
@@ -20,12 +22,14 @@
 }
 
 .summary .name, .tags .name { color: gray; }
-.summary .tags {}
 
 .odd { background-color: #F0F6F9; }
 .even { background-color: #FFFFFF; }
+.selected {	background-color: #FFCC80; }
+
 
 #background, #features, #scenarios { margin-top: 10px; margin-left: 20px; }
+
 
 #directory { margin-top: 20px; margin-left: 20px; }
 
@@ -43,7 +47,8 @@
 #directory .title .name, #features .title .name, #scenarios .title .name { font-weight: normal; }
 
 #background .title .pre { color: #346F97; }
-.requirements .tags { margin-left: 50px; margin-right: 30px; }
+.requirements .tags, .scenario .tags { float: right; margin-right: 20px; margin-top: 5px; }
+
 
 * ul.alpha { font-size: 1.1em; }
 * ul.alpha { padding-bottom: 10px; list-style: none; }
@@ -53,7 +58,7 @@
 
 
 .scenario .steps, #background .steps {
-    margin: 20px 20px 0px 30px;
+    margin: 0px 20px 0px 30px;
     font-size: 12px;
 }
 
@@ -72,20 +77,20 @@
 
 #background .description, .scenario .description {
     padding: 10px;
-    background-color: #F8F8FF;
     color: #444444;
     margin-right: 20px;
+    margin-left: 20px;
 }
-.scenario .meta .comments { padding: 10px;  }
-.step .comments { color: gray; padding-bottom: 5px; font-size: 13px; }
+
+.comments { margin-left: 25px; color: gray; padding: 5px; font-size: 13px; }
+.scenario .steps .comments { margin-left: 0px; }
 
 .scenario .title .pre {	color: #00AAD2; }
-.scenario .tags { margin-left: 30px; margin-top: 10px; }
 
 .step .predicate { color: #5D5C5B; }
 /*.step .undefined { border-bottom: 1px dashed #E99494; }*/
 .step .defined {}
-.step .details { float: right; color: #343332; }
+.step .definition { float: right; color: #343332; }
 .step .details .pre {}
 .step .details .name { font-family: monospace; color: black; }
 .step .defined .match { color: #346F97; }
@@ -107,6 +112,7 @@
     font-weight: bold;
     font-size: 16px;
 }
+
 
 .multiline table tr, .outline table tr {
     padding: 4px;
