Direct link to Scenarios
  + Linked on the tag filtering page
  + Linked on all of the tag pages
  + linked in the feature list

  NOTE: That when you select a feature of the page you are on, it does
  not close the search window.  I'll look at addressing that later.

  - Removed scenario outline instances from the step filtering page

--- a/lib/templates/default/feature/html/scenario.erb
+++ b/lib/templates/default/feature/html/scenario.erb
@@ -1,5 +1,5 @@
 <div class="scenario">
-  <a name="<%= @id %>">
+  <a name="<%= @id %>" />
   <div class="title">
     <a class="toggle">&nbsp;-&nbsp;</a>
     <span class="pre"><%= @scenario.keyword %>:</span>
