Minor CSS Fixes
  - FIX changed 'details' to 'definition' on the step transformer page
  - FIX Tags on the tag search page were out of alignment
  - FIX moved the feature specific tags to the right with all the other details

--- a/lib/templates/default/feature/html/feature.erb
+++ b/lib/templates/default/feature/html/feature.erb
@@ -15,6 +15,7 @@
 
 <div class="meta">
   <div class="file developer"><%= h(@feature.file) %></div>
+  <div style="clear: right;"></div>
   <div class="tags developer">
     <% @feature.tags.each do |tag| %>
       <a href="<%= url_for tag %>"><%= tag.value %></a>
