--- a/lib/templates/default/steptransformers/html/transformers.erb
+++ b/lib/templates/default/steptransformers/html/transformers.erb
@@ -33,7 +33,7 @@
 			<span class="defined">
 			<%= link_transformed_step(step) %>
 			</span>
-			<div class="details"><a href="<%= url_for step.scenario.feature %>"><%= h(step.location) %></a></div>
+			<div class="definition"><a href="<%= url_for step.scenario.feature %>"><%= h(step.location) %></a></div>
 		</div>
 		<% end %>
 		<% else %>
