--- a/lib/templates/default/steptransformers/html/undefined_steps.erb
+++ b/lib/templates/default/steptransformers/html/undefined_steps.erb
@@ -7,7 +7,7 @@
       <span class="undefined">
         <%= h step.value %>
       </span>
-      <div class="details">
+      <div class="definition">
         <a href="<%= url_for step.scenario.feature %>"><%= h(step.location) %></a>
       </div>
     </div>
