--- a/lib/templates/default/steptransformers/html/undefined_steps.erb
+++ b/lib/templates/default/steptransformers/html/undefined_steps.erb
@@ -1,4 +1,4 @@
-<div class="stepdef">
+<div class="stepdefinition">
   <div class="steps">
   <% if @undefined_steps && !@undefined_steps.empty? %>
     <% @undefined_steps.each_with_index do |step,step_index| %>
