Step Def & Transform Page Update
  + Definitions and Transforms link to Rubular, auto-populating with
    the regex value.  To provide a way to troubleshoot regular
    expressions

  + Step definitions and Transforms have more method-like formatting.

  + Feature's scenarios and background have adopted this style without
    the border.  Background is slightly different than the rest of the
    scenarios.

  - Removed extraneous step transformer file

--- a/lib/templates/default/feature/html/feature.erb
+++ b/lib/templates/default/feature/html/feature.erb
@@ -9,8 +9,8 @@
     <span class="pre"><%= @feature.keyword %>:</span>
     <span class="name"><%= @feature.value %></span>
 
-    <div id="view">[More Detail]</div>
-    <div id="expand">[Collapse All]</div>
+    <div id="view" class="control">[More Detail]</div>
+    <div id="expand" class="control">[Collapse All]</div>
 </div>
 
 <div class="meta">
