--- a/lib/templates/default/feature/html/scenario.erb
+++ b/lib/templates/default/feature/html/scenario.erb
@@ -1,7 +1,7 @@
-<div class="scenario">
+<div class="scenario <%= @id %>">
   <a name="<%= @id %>" />
   <div class="title">
-    <a class="toggle">&nbsp;-&nbsp;</a>
+    <a class="toggle"> - </a>
     <span class="pre"><%= @scenario.keyword %>:</span>
     <span class="name"><%= h @scenario.value %></span>
   </div>
