History, Version 1.7.2, table header color change
  + Updated to version 1.7.2
  + Changed the strong color of the table header to something softer

--- a/lib/templates/default/fulldoc/html/css/common.css
+++ b/lib/templates/default/fulldoc/html/css/common.css
@@ -121,7 +121,7 @@
 .multiline table thead tr th, .outline table thead tr th {
     text-align: left;
     padding: 4px;
-    background-color: #A8C0A8;
+    background-color: #C4E0C7;
 }
 .multiline table tr td, .outline table tr td {
     min-width: 100px;
